--- a/playbook_zabbix_install.yml
+++ b/playbook_zabbix_install.yml
@@ -2,17 +2,11 @@
 - hosts: all
 
   tasks:
-  #- name: Install zabbix-agent useing choco
-    #win_shell: choco install zabbix-agent
-    #ignore_errors : yes
-    #register: result
-  #- debug:
-      #var: result.stdout_lines
 
   - name: Install zabbix-agent useing choco
     win_chocolatey:
       name: zabbix-agent
-      state: latest
+      state: reinstalled
 
   - name: Copy prepared zabbix_agentd.conf
     win_copy:
