--- a/playbook_zabbix_install.yml
+++ b/playbook_zabbix_install.yml
@@ -21,5 +21,5 @@
   - name: Restart a Zabbix Agent service
     win_service:
       name: Zabbix Agent
-      state: restarted
+      state: stopped
     
