--- a/playbook_zabbix_install.yml
+++ b/playbook_zabbix_install.yml
@@ -8,6 +8,11 @@
       name: zabbix-agent
       state: reinstalled
 
+  - name: Restart a Zabbix Agent service
+    win_service:
+      name: Zabbix Agent
+      state: stopped
+
   - name: Copy prepared zabbix_agentd.conf
     win_copy:
       src: /home/alex/Ansible/scripts/zabbix_agentd.conf
@@ -21,5 +26,5 @@
   - name: Restart a Zabbix Agent service
     win_service:
       name: Zabbix Agent
-      state: stopped
+      state: started
     
