--- a/playbook_firewall_rdp.yml
+++ b/playbook_firewall_rdp.yml
@@ -46,27 +46,27 @@
       state: present
       enabled: yes 
   
-  - name: Remote Desktop - User Mode (TCP-In) /3
-    win_firewall_rule:
-      name: Remote Desktop - User Mode (TCP-In)-3
-      localport: 3389
-      action: allow
-      direction: in
-      protocol: tcp
-      remoteip: 5.79.86.92
-      state: present
-      enabled: yes   
+#  - name: Remote Desktop - User Mode (TCP-In) /3
+#    win_firewall_rule:
+#      name: Remote Desktop - User Mode (TCP-In)-3
+#      localport: 3389
+#      action: allow
+#      direction: in
+#      protocol: tcp
+#      remoteip: 5.79.86.92
+#      state: present
+#      enabled: yes   
 
-  - name: Remote Desktop - User Mode (UDP-In) /3
-    win_firewall_rule:
-      name: Remote Desktop - User Mode (UDP-In)-3
-      localport: 3389
-      action: allow
-      direction: in
-      protocol: udp
-      remoteip: 5.79.86.92
-      state: present
-      enabled: yes  
+#  - name: Remote Desktop - User Mode (UDP-In) /3
+#    win_firewall_rule:
+#      name: Remote Desktop - User Mode (UDP-In)-3
+#      localport: 3389
+#      action: allow
+#      direction: in
+#      protocol: udp
+#      remoteip: 5.79.86.92
+#      state: present
+#      enabled: yes  
 
   - name: Remote Desktop - User Mode (TCP-In)
     win_firewall_rule:
