--- a/playbook_zabbix_install.yml
+++ b/playbook_zabbix_install.yml
@@ -15,12 +15,12 @@
 
   - name: Copy prepared zabbix_agentd.conf
     win_copy:
-      src: /home/exor/Ansible/scripts/zabbix_agentd.conf
+      src: ~/Ansible/scripts/zabbix_agentd.conf
       dest: C:\ProgramData\zabbix
 
   - name: Copy prepared zabbix_agentd.psk
     win_copy:
-      src: /home/exor/Ansible/scripts/zabbix_agentd.psk
+      src: ~/Ansible/scripts/zabbix_agentd.psk
       dest: C:\ProgramData\zabbix
 
   - name: Restart a Zabbix Agent service
