--- a/playbook_firewall_JPrdp.yml
+++ b/playbook_firewall_JPrdp.yml
@@ -5,7 +5,7 @@
   - name: Remote Desktop - User Mode (TCP-In) /1
     win_firewall_rule:
       name: Remote Desktop - User Mode (TCP-In)-1
-      localport: 6859
+      localport: "{{ port }}"
       action: allow
       direction: in
       protocol: tcp
@@ -16,7 +16,7 @@
   - name: Remote Desktop - User Mode (UDP-In) /1
     win_firewall_rule:
       name: Remote Desktop - User Mode (UDP-In)-1
-      localport: 6859
+      localport: "{{ port }}"
       action: allow
       direction: in
       protocol: udp
@@ -27,7 +27,7 @@
   - name: Remote Desktop - User Mode (TCP-In) /2  
     win_firewall_rule:
       name: Remote Desktop - User Mode (TCP-In)-2
-      localport: 6859
+      localport: "{{ port }}"
       action: allow
       direction: in
       protocol: tcp
@@ -38,7 +38,7 @@
   - name: Remote Desktop - User Mode (UDP-In) /2  
     win_firewall_rule:
       name: Remote Desktop - User Mode (UDP-In)-2
-      localport: 6859
+      localport: "{{ port }}"
       action: allow
       direction: in
       protocol: udp
@@ -49,29 +49,29 @@
   - name: Remote Desktop - User Mode (TCP-In) /3
     win_firewall_rule:
       name: Remote Desktop - User Mode (TCP-In)-3
-      localport: 6859
+      localport: "{{ port }}"
       action: allow
       direction: in
       protocol: tcp
-      remoteip: 5.79.86.92
+      remoteip: 5.79.70.74
       state: present
       enabled: yes   
 
   - name: Remote Desktop - User Mode (UDP-In) /3
     win_firewall_rule:
       name: Remote Desktop - User Mode (UDP-In)-3
-      localport: 6859
+      localport: "{{ port }}"
       action: allow
       direction: in
       protocol: udp
-      remoteip: 5.79.86.92
+      remoteip: 5.79.70.74
       state: present
       enabled: yes  
 
   - name: Remote Desktop - User Mode (TCP-In) /4
     win_firewall_rule:
       name: Remote Desktop - User Mode (TCP-In)-4
-      localport: 6859
+      localport: "{{ port }}"
       action: allow
       direction: in
       protocol: tcp
@@ -82,11 +82,33 @@
   - name: Remote Desktop - User Mode (UDP-In) /4
     win_firewall_rule:
       name: Remote Desktop - User Mode (UDP-In)-4
-      localport: 6859
+      localport: "{{ port }}"
       action: allow
       direction: in
       protocol: udp
       remoteip: 46.235.38.138
+      state: present
+      enabled: yes
+
+  - name: Remote Desktop - User Mode (TCP-In) /5
+    win_firewall_rule:
+      name: Remote Desktop - User Mode (TCP-In)-5
+      localport: "{{ port }}"
+      action: allow
+      direction: in
+      protocol: tcp
+      remoteip: 81.17.60.23
+      state: present
+      enabled: yes
+
+  - name: Remote Desktop - User Mode (TCP-In) /6
+    win_firewall_rule:
+      name: Remote Desktop - User Mode (TCP-In)-6
+      localport: "{{ port }}"
+      action: allow
+      direction: in
+      protocol: tcp
+      remoteip: 209.58.180.182
       state: present
       enabled: yes
 
