--- a/playbook_firewall_rdp.yml
+++ b/playbook_firewall_rdp.yml
@@ -46,16 +46,38 @@
       state: present
       enabled: yes 
   
-#  - name: Remote Desktop - User Mode (TCP-In) /3
-#    win_firewall_rule:
-#      name: Remote Desktop - User Mode (TCP-In)-3
-#      localport: 3389
-#      action: allow
-#      direction: in
-#      protocol: tcp
-#      remoteip: 5.79.86.92
-#      state: present
-#      enabled: yes   
+  - name: Remote Desktop - User Mode (TCP-In) /3
+    win_firewall_rule:
+      name: Remote Desktop - User Mode (TCP-In)-3
+      localport: 3389
+      action: allow
+      direction: in
+      protocol: tcp
+      remoteip: 5.79.70.74
+      state: present
+      enabled: yes   
+
+  - name: Remote Desktop - User Mode (TCP-In) /4
+    win_firewall_rule:
+      name: Remote Desktop - User Mode (TCP-In)-4
+      localport: 3389
+      action: allow
+      direction: in
+      protocol: tcp
+      remoteip: 81.17.60.23
+      state: present
+      enabled: yes
+
+  - name: Remote Desktop - User Mode (TCP-In) /5
+    win_firewall_rule:
+      name: Remote Desktop - User Mode (TCP-In)-5
+      localport: 3389
+      action: allow
+      direction: in
+      protocol: tcp
+      remoteip: 209.58.180.182
+      state: present
+      enabled: yes
 
 #  - name: Remote Desktop - User Mode (UDP-In) /3
 #    win_firewall_rule:
